--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(fastNumStats)
 export(fillTable1Num)
 export(numStatsTable)
 export(numStatsTablePerCat)
+importFrom(data.table,".N")
+importFrom(data.table,".SD")
+importFrom(data.table,".SDcols")
 importFrom(data.table,":=")
-importFrom(data.table,.N)
-importFrom(data.table,.SD)
