--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,11 +6,13 @@ export(extensiveCatStats)
 export(fastCatStats)
 export(fastNumStats)
 export(fillTable1Num)
+export(findBestPredictionCutoff)
 export(kableTable)
 export(lgbCV)
 export(lgb_prauc)
 export(numStatsTable)
 export(numStatsTablePerCat)
+export(printEvals)
 importFrom(data.table,".N")
 importFrom(data.table,".SD")
 importFrom(data.table,":=")
