--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,9 +10,9 @@ export(findBestPredictionCutoff)
 export(kableTable)
 export(lgbCV)
 export(lgb_prauc)
-export(numStatsTable)
-export(numStatsTablePerCat)
 export(printEvals)
+export(stats_table)
+export(stats_tablePerCat)
 importFrom(data.table,".N")
 importFrom(data.table,".SD")
 importFrom(data.table,":=")
