renamed kable_table func

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,7 +7,7 @@ export(fastCatStats)
 export(fastNumStats)
 export(fillTable1Num)
 export(findBestPredictionCutoff)
-export(kableTable)
+export(kable_table)
 export(lgbCV)
 export(lgb_prauc)
 export(printEvals)
