--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: KhelpeR
 Title: Helper Functions and Misc
 Version: 0.0.0.9000
 Authors@R: person('Lorenz', 'Kapsner', email =
- 'lorenz.kapsner@web.de', role = c('cre', 'aut'))
+ 'lorenz.kapsner@gmail.com', role = c('cre', 'aut'))
 Description: My Personal Helper Functions.
 License: GPL-3
 LazyData: true
