--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,25 @@
 data-raw/devstuffs.R
 data-raw/
-*.Rproj
 .Rproj.user
 .Rhistory
 inst/doc
+/*
+/*/
+*.log
+!/.gitignore
+!/.Rbuildignore
+!/.gitlab-ci.yml
+!/inst/
+!/man/
+!NAMESPACE
+!/R/
+!/README.md
+!/tests/
+/.Rhistory
+!/*.Rproj
+/.Rproj*
+/.RData
+/.vscode
+!/.lintr
+DESCRIPTION
+LICENSE.md
