--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,9 +2,9 @@
 
 export("%notin%")
 export(evalBinaryMetrics)
-export(extensiveCatStats)
-export(fastCatStats)
-export(fastNumStats)
+export(extensive_cat_stats)
+export(fast_Cat_stats)
+export(fast_num_stats)
 export(fillTable1Num)
 export(findBestPredictionCutoff)
 export(kable_table)
@@ -12,7 +12,7 @@ export(lgbCV)
 export(lgb_prauc)
 export(printEvals)
 export(stats_table)
-export(stats_tablePerCat)
+export(stats_table_per_cat)
 importFrom(data.table,".N")
 importFrom(data.table,".SD")
 importFrom(data.table,":=")
