--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,19 +3,17 @@
 export("%notin%")
 export(binary_results)
 export(binary_significant_vars)
+export(cap_outliers)
 export(continuous_stats)
 export(continuous_stats_grouped)
 export(continuous_stats_overview)
 export(continuous_stats_table1)
 export(discrete_stats)
 export(discrete_stats_overview)
-export(evalBinaryMetrics)
-export(fillTable1Num)
-export(findBestPredictionCutoff)
+export(flag_outliers)
 export(html_table)
 export(html_table_flex)
 export(plot_boxplot)
-export(printEvals)
 importFrom(data.table,".N")
 importFrom(data.table,".SD")
 importFrom(data.table,":=")
