--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: KhelpeR
 Title: Helper Functions and Misc
-Version: 0.0.0.9002
+Version: 0.0.1.9001
 Authors@R: person('Lorenz', 'Kapsner', email =
  'lorenz.kapsner@gmail.com', role = c('cre', 'aut'))
 Description: My Personal Helper Functions.
@@ -9,7 +9,7 @@ LazyData: true
 URL: https://github.com/kapsner/KhelpeR
 BugReports: https://github.com/kapsner/KhelpeR/issues
 Encoding: UTF-8
-Date/Publication: 2020-04-13 18:16:12 UTC
+Date/Publication: 2020-04-18 14:48:17 UTC
 Imports: 
     data.table,
     e1071,
@@ -22,8 +22,7 @@ Imports:
     sjstats,
     knitr,
     kableExtra,
-    tidyr,
-    dplyr
+    flextable
 Suggests: 
     testthat,
     datasets,
