--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(continuous_stats_overview)
 export(continuous_stats_table1)
 export(continuous_test_hypoth_bin)
 export(continuous_test_hypoth_bin2)
+export(continuous_test_hypoth_multi)
 export(continuous_test_hypoth_sig_vars)
 export(discrete_stats)
 export(discrete_stats_overview)
