--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: KhelpeR
 Title: Helper Functions and Misc
-Version: 0.0.1.9001
+Version: 0.0.1.9002
 Authors@R: person('Lorenz', 'Kapsner', email =
  'lorenz.kapsner@gmail.com', role = c('cre', 'aut'))
 Description: My Personal Helper Functions.
@@ -9,7 +9,7 @@ LazyData: true
 URL: https://github.com/kapsner/KhelpeR
 BugReports: https://github.com/kapsner/KhelpeR/issues
 Encoding: UTF-8
-Date/Publication: 2020-04-18 14:48:17 UTC
+Date/Publication: 2020-05-10 13:06:23 UTC
 Imports: 
     data.table,
     e1071,
@@ -22,7 +22,8 @@ Imports:
     sjstats,
     knitr,
     kableExtra,
-    flextable
+    flextable,
+    gtools
 Suggests: 
     testthat,
     datasets,
