added normality plots (qq and hist)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(flag_outliers)
 export(html_table)
 export(html_table_flex)
 export(plot_boxplot)
+export(plot_normality)
 importFrom(data.table,".N")
 importFrom(data.table,".SD")
 importFrom(data.table,":=")
